--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,38 @@
   publisher={Elsevier}
 }
 
+@article{laird1982random,
+  title={Random-effects models for longitudinal data},
+  author={Laird, Nan M and Ware, James H and others},
+  journal={Biometrics},
+  volume={38},
+  number={4},
+  pages={963--974},
+  year={1982}
+}
+
+@article{rizopoulos2017dynamic,
+  title={Dynamic predictions with time-dependent covariates in survival analysis using joint modeling and landmarking},
+  author={Rizopoulos, Dimitris and Molenberghs, Geert and Lesaffre, Emmanuel MEH},
+  journal={Biometrical Journal},
+  volume={59},
+  number={6},
+  pages={1261--1276},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{de2017estimating,
+  title={Estimating the risks and benefits of active surveillance protocols for prostate cancer: a microsimulation study},
+  author={de Carvalho, Tiago M and Heijnsdijk, Eveline AM and de Koning, Harry J},
+  journal={BJU international},
+  volume={119},
+  number={4},
+  pages={560--566},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @article{rizopoulosJMbayes,
 author = {Dimitris Rizopoulos},
 title = {The {R} Package {JMbayes} for Fitting Joint Models for Longitudinal and Time-to-Event Data Using {MCMC}},
@@ -146,7 +178,5 @@ journal = {Biometrics},
 volume = {75},
 number = {1},
 pages = {153-162},
-keywords = {Active surveillance, Biopsy, Joint models, Personalized medicine, Prostate cancer},
-doi = {10.1111/biom.12940},
 year = {2019}
 }
