--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -51,7 +51,7 @@
 
 \begin{frontmatter}
 
-\title{Personalized Risk Based Shared Decision Making Framework for Biopsies in Prostate Cancer Active Surveillance\tnoteref{wordcount}}
+\title{Personalized Biopsies in Prostate Cancer Active Surveillance\tnoteref{wordcount}}
 \tnotetext[wordcount]{Word Count Abstract: 300; Word Count Text: 2800}
 
 %% Group authors per affiliation:
