--- a/report/decision_analytic/mdm/latex/mainmatter-highlighted/methods_study_pop.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter-highlighted/methods_study_pop.tex
@@ -40,6 +40,6 @@ $\mbox{DRE} = \mbox{T1c}$ (\%) & 23538/25606 (92\%) \\
 
 For all patients, PSA measurements (ng/mL) are scheduled every 3 months for the first 2 years and every 6 months thereafter. The DRE measurements are scheduled every 6 months. We use the DRE measurements as $\mbox{DRE} = \mbox{T1c}$ versus $\mbox{DRE} > \mbox{T1c}$. A DRE measurement equal to T1c\cite{schroder1992tnm} indicates a clinically inapparent tumor which is not palpable or visible by imaging, while tumors with $\mbox{DRE} > \mbox{T1c}$ are palpable.
 
-\textcolor{blue}{\textbf{Data Accessibility:} The PRIAS database is not openly accessible. However, access to the database can be requested on the basis of a study proposal approved by the PRIAS steering committee. The website of the PRIAS program is \url{www.prias-project.org}.}
+\textbf{Data Accessibility:} The PRIAS database is not openly accessible. However, access to the database can be requested on the basis of a study proposal approved by the PRIAS steering committee. The website of the PRIAS program is \url{www.prias-project.org}.
 
 
