--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -1,16 +1,10 @@
 % !TEX root =  ../main_manuscript.tex 
 \begin{abstract}
-\texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance (AS) undergo repeat biopsies. Treatment is advised when biopsy Gleason~$\geq$~7 (GS7). Many patients never obtain GS7, yet undergo biopsies frequently.\\
-
+\texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance (AS) undergo repeat biopsies. Treatment often advised when biopsy Gleason~$\geq$~7 (GS7). Many patients never obtain GS7, yet undergo biopsies frequently.\\
 \texttt{Objective}: Better balance the number of biopsies and time delay in detection of GS7.\\
-
-\texttt{Design, Setting, and Participants}: World's largest AS study PRIAS, 7813 patients, 1134 obtained GS7, 100 medical centers in 17 countries, common study protocol as well as web-based tool for data collection.\\
-
-\texttt{Outcome Measurements, and Statistical Analysis}: Prostate-specific antigen (PSA) measured every six months, repeat biopsies scheduled every one to three years. A Bayesian joint model was fitted to the observed time of GS7 and longitudinal PSA measurements. Predictions for GS7 externally validated in five largest AS cohorts (GAP3 database). Predictions used to develop risk based biopsy schedules. Comparison made with fixed schedules on the basis of total biopsies and expected delay in detection of GS7.\\
-
-\texttt{Results and Limitations}: Median time of GS7 in PRIAS $>$ 10 years. Rate of change of (log-transformed) PSA was a stronger predictor of GS7 (Hazard~Ratio:~2.45,~95\%CI: 1.83--2.95) than PSA value (Hazard~Ratio:~1.00,~95\%CI:~0.98--1.02). Internal validation: Time varying area under ROC curve for GS7 prediction ranged between 0.xx and 0.xx, and prediction error between 0.xx and 0.xx. External validation: Results similar to internal validation only for Toronto and Johns Hopkins cohorts.\\
-
-\texttt{Conclusions}: We developed risk based biopsy schedules as an alternative to fixed schedules. We hope to enable better biopsy decisions as we also provide for both types of schedules, the total biopsies and expected delay in detection of GS7. Our methodology updates itself as more patient data is gathered over follow-up.
-
-\texttt{Patient Summary}: An alternative to fixed and frequent biopsies for all patients are the risk based biopsy schedules proposed in this work. These are tailored individually for each patient, and offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
+\texttt{Design, Setting, and Participants}: World's largest AS study PRIAS, 7813 patients, 1134 obtained GS7, 100 medical centers in 17 countries, common study protocol and online tool for data collection.\\
+\texttt{Outcome Measurements, and Statistical Analysis}: Prostate-specific antigen (PSA) measured every six months, repeat biopsies every one to three years. Bayesian joint model fitted to the observed time of GS7 and longitudinal PSA measurements. Predictions for GS7 externally validated in five largest AS cohorts (GAP3 database). Predictions utilized to develop risk based biopsy schedules, and then compared with fixed schedules on the basis of total biopsies and expected delay in detection of GS7.\\
+\texttt{Results and Limitations}: Roughly 50\% patients do not obtain GS7 in first 10 years in PRIAS. Rate of change of (log-transformed) PSA was a stronger predictor of GS7 (Hazard~Ratio:~2.45,~95\%CI: 1.83--2.95) than PSA value (Hazard~Ratio:~1.00,~95\%CI:~0.98--1.02). Internal validation: Time varying area under ROC curve for GS7 prediction ranged between 0.xx and 0.xx, and prediction error between 0.xx and 0.xx. External validation: Results similar to internal validation only for Toronto and Johns Hopkins cohorts.\\
+\texttt{Conclusions}: We developed risk based biopsy schedules as alternative to fixed schedules. For both fixed and risk based schedules we provide total biopsies, time of biopsies, and expected time delay in detection of GS7. Risk based schedules update over follow-ups with more patient data.\\
+\texttt{Patient Summary}: Risk based biopsy schedules are a novel alternative to fixed biopsy schedules (e.g., yearly biopsies). They utilize a patient's PSA history and biopsy history to decide best time of biopsies in future. Such personalized schedules can offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
 \end{abstract}
