--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,10 +1,10 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed a novel methodology for personalized decision making of biopsies in low-risk PCa patients enrolled in AS programs. In this methodology patients are first provided risk of reclassification based personalized biopsy schedules, as an alternative to fixed and frequent biopsy schedules (e.g., annual biopsies). Subsequently, to assist patients in making an appropriate choice among the personalized and fixed schedules, we also provide them the consequences of following each schedule. More specifically, for each schedule we give the total number of biopsies (burden), the time at which they will be conducted, and the expected delay in detection of reclassification. This delay is estimated after accounting for the probability of not having any reclassification at all over the follow-up period. Lastly, our approach dynamically updates the aforementioned schedules and consequences as more patient data becomes available over follow-up. 
+We developed a novel methodology for personalized biopsies in low-risk PCa patients enrolled in AS programs. These biopsies are based on a patient's risk profile for having a Gleason $\geq$ 7 (GS7). To assist patients in making a choice between the personalized and currently practiced fixed schedules, we give objective estimates of the consequences of following each schedule. More specifically, for a schedule we give the total number of biopsies (burden), the time at which they will be conducted, and the expected delay in detection of GS7. This delay is estimated after accounting for the probability of not having any GS7 at all over the follow-up period. Lastly, our approach dynamically updates the aforementioned schedules and consequences as more patient data becomes available over follow-up.
 
 The aforementioned methodology is based on the world's largest PCa AS program, PRIAS. Consequently, a lot of patients may get benefited from this study. To this end, we have developed a web-application implementing our methodology. The web-application only requires patient data in well known file formats (e.g., SPSS, CSV etc.), but does not require any separate integration with the electronic health record of the PRIAS program. We hope that this will lead to improvement in the shared decision making of biopsies, with patients having objective estimates of the consequences of their decisions. 
 
-\textbf{Clinical implications:} The median survival time for reclassification is more than ten years in PRIAS. That is, more than 50\% patients do not require any biopsy during the first ten years of follow-up. The situation is similar in many other cohorts. Hence frequent biopsies may not be recommended for all patients.
+\textbf{Clinical implications:} The median survival time for GS7 is more than ten years in PRIAS. That is, more than 50\% patients do not require any biopsy during the first ten years of follow-up. The situation is similar in many other cohorts. Hence frequent biopsies may not be recommended for all patients.
 
 Existing work on reducing the burden of biopsies in AS primarily advocates less frequent heuristic schedules of biopsies \citep{inoue2018comparative} (e.g., biopsies biennially instead of annually). To our knowledge, risk-based biopsy schedules have barely been explored yet in AS \citep{nieboer2018active,bruinsma2016active}. The part of our results pertaining to the fixed/heuristic schedules is comparable with corresponding results obtained in existing work \citep{inoue2018comparative}, even though the AS cohorts are not the same. Thus, we anticipate similar validity for the results pertaining to the personalized schedules.
 
