--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -2,11 +2,11 @@
 \section{Patients and Methods}
 
 \subsection{Study Cohort}
-Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries worldwide contribute in PRIAS \url{www.prias-project.org}. We use the data collected between December 2006 (beginning of PRIAS study) and May 2019. The follow-up protocol scheduled PSA measurements (ng/mL) every three months for the first two years and every six months thereafter. Repeat biopsies were scheduled after one, four, seven, and ten years. Additional yearly biopsies were scheduled for patients having PSA doubling time between three and ten years. Reclassification (Gleason $>$ 6) was observed in 1134 patients, and 2250 were provided treatment (see Table \ref{table:prias_summary}). Treatment in absence of reclassification may have been advised on the basis of PSA, number of biopsy cores with cancer, anxiety, or other undocumented reasons. However, we focus only on Gleason reclassification because of its strong association with cancer related outcomes. Due to the periodical nature of biopsies, the time of reclassification was only known as a time interval in which it occurred.
+Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries contribute in PRIAS, using a common study protocol (\url{www.prias-project.org}). We used the data collected between December~2006 (beginning of PRIAS study) and May~2019. The PSA was measured every three months until year two of follow-up and every six months thereafter. Biopsy schedule was year one, four, seven, and ten, and additional yearly biopsies when PSA doubling time is between three and ten years. The primary event of this work is Gleason $\geq$ 7 (GS7). It was observed in 1134 patients, but 2250 were provided treatment (see Table \ref{table:prias_summary}). Treatment in absence of GS7 may have been advised on the basis of PSA, number of biopsy cores with cancer, anxiety, or other reasons. We focused only on GS7 because of its strong association with cancer-related outcomes. Due to the periodical nature of biopsies, the time of GS7 was only known as a time interval in which it occurred.
 
 \begin{table}
 \small\sf\centering
-\caption{\textbf{Patient characteristics for the PRIAS dataset}. The primary event of interest is disease reclassification. IQR: interquartile range, PSA: prostate-specific antigen.}
+\caption{\textbf{Patient characteristics for the PRIAS dataset}. The primary event of interest is Gleason $\geq$ 7. IQR: interquartile range, PSA: prostate-specific antigen.}
 \label{table:prias_summary}
 \begin{tabular}{lr}
 \hline
@@ -14,7 +14,7 @@ Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospect
 Characteristic & Value\\
 \hline
 Total patients & 7813\\
-Disease reclassification (primary event) & 1134\\
+Gleason $\geq$ 7 (primary event) & 1134\\
 Treatment & 2250\\
 Watchful waiting & 334\\
 Loss to follow-up & 250\\
