code for demo of patietn schedules

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,28 @@
   publisher={Elsevier}
 }
 
+@article{balasubramanian2003estimation,
+  title={Estimation of a failure time distribution based on imperfect diagnostic tests},
+  author={Balasubramanian, Raji and Lagakos, Stephen W},
+  journal={Biometrika},
+  volume={90},
+  number={1},
+  pages={171--182},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@article{ankerst2015precision,
+  title={Precision medicine in active surveillance for prostate cancer: development of the canary--early detection research network active surveillance biopsy risk calculator},
+  author={Ankerst, Donna P and Xia, Jing and Thompson Jr, Ian M and Hoefler, Josef and Newcomb, Lisa F and Brooks, James D and Carroll, Peter R and Ellis, William J and Gleave, Martin E and Lance, Raymond S and others},
+  journal={European urology},
+  volume={68},
+  number={6},
+  pages={1083--1088},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @article{laird1982random,
   title={Random-effects models for longitudinal data},
   author={Laird, Nan M and Ware, James H and others},
