--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -2,7 +2,7 @@
 \section{Introduction}
 Patients with low- and very low-risk screening-detected localized prostate cancer (PCa) are usually advised active surveillance (AS) instead of immediate radical treatment \citep{briganti2018active}. In AS, PCa progression is routinely monitored via prostate-specific antigen (PSA), digital rectal examination, and the Gleason score from repeat prostate biopsies. Since Gleason score is the strongest indicator of cancer-related outcomes, patients are commonly advised curative treatment when Gleason~$\geq$~7 (GS7) is detected \citep{bul2013active}.
 
-Biopsies are conducted periodically, and hence GS7 is always detected with a time delay. The smaller the delay, the larger is the window of opportunity for curative treatment. For timely detection of GS7, many AS programs use fixed biopsy schedules (e.g., annual or biennial biopsies) for all patients \citep{nieboer2018active,loeb2014heterogeneity}. In Figure~\ref{fig:npmle_plot} we can see that in the PRIAS and JHAS cohorts, 50\% patients do not need such frequent biopsies in first ten years of follow-up. Biopsies are also invasive, painful and prone to medical complications. Biopsy burden and patient non-compliance \citep{bokhorst2015compliance} to frequent biopsies, has raised questions about the optimal biopsy schedule \citep{inoue2018comparative, bratt2013study}.
+Biopsies are conducted periodically, and hence GS7 is always detected with a time delay. The smaller the delay, the larger is the window of opportunity for curative treatment. For timely detection of GS7, many AS programs use fixed biopsy schedules (e.g., annual or biennial biopsies) for all patients \citep{nieboer2018active,loeb2014heterogeneity}. In Figure~\ref{fig:npmle_plot} we can see that in the PRIAS and JHAS cohorts, 50\% patients do not need such frequent biopsies in first ten years of follow-up. Biopsies are also invasive, painful and prone to medical complications. Biopsy burden and patient non-compliance \citep{bokhorst2015compliance} to frequent biopsies, has raised concerns regarding the optimal biopsy schedule \citep{inoue2018comparative, bratt2013study}.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/npmle_plot.eps}}
