--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,2 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
+We developed a novel methodology for scheduling biopsies to detect Gleason~$\geq$~7 (GS7) in PCa patients enrolled in AS. Our methodology consolidates a patient's entire history of PSA and repeat biopsies, and baseline characteristics into risk profile of GS7 over his follow-up period. It then utilizes this risk profile to schedule biopsies in a personalized manner. The personalized schedule is updated as more patient data is gathered over follow-up. To assist patients in making the choice of the best biopsy schedule, we provided them personalized burden (time and total biopsies), and personalized benefit (less delay in detection of GS7 is beneficial), for both personalized and currently used schedules. Lastly, we implemented this approach in a web-application.
