--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,11 +1,9 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed a novel methodology for personalized biopsies in low-risk PCa patients enrolled in AS programs. These biopsies are based on a patient's risk profile for having a Gleason $\geq$ 7 (GS7). To assist patients in making a choice between the personalized and currently practiced fixed schedules, we give objective estimates of the consequences of following each schedule. More specifically, for a schedule we give the total number of biopsies (burden), the time at which they will be conducted, and the expected delay in detection of GS7. This delay is estimated after accounting for the probability of not having any GS7 at all over the follow-up period. Lastly, our approach dynamically updates the aforementioned schedules and consequences as more patient data becomes available over follow-up.
+We developed personalized schedules for repeat biopsies in PCa patients enrolled in AS programs. These schedules were based on a patient's risk for having a Gleason~$\geq$~7 (GS7). Patient- and visit-specific risks of GS7 were estimated using their entire history of PSA and repeat biopsies, and baseline characteristics. Consequently, the personalized schedules were updated as more data was gathered over follow-up. Risk calculators for GS7 are not new \citep{coley2017prediction,ankerst2015precision}. However, the novelty of our work is that we developed a methodology for scheduling personalized biopsies using those risks, as well a methodology to compare schedules, be it personalized or fixed, in simple terms of burden and benefit. More specifically, for each schedule we provided patients the times of biopsy and total biopsies (burden), and the delay in detection of GS7 (less is beneficial) expected due to that schedule. We also implemented our methodology in a web-application.
 
-The aforementioned methodology is based on the world's largest PCa AS program, PRIAS. Consequently, a lot of patients may get benefited from this study. To this end, we have developed a web-application implementing our methodology. The web-application only requires patient data in well known file formats (e.g., SPSS, CSV etc.), but does not require any separate integration with the electronic health record of the PRIAS program. We hope that this will lead to improvement in the shared decision making of biopsies, with patients having objective estimates of the consequences of their decisions. 
+The proposed joint model accounted for the complex correlation structure that exists between longitudinal PSA measurements and time of GS7 of a patient. It also accounted for PSA measurements that were missing in patients who obtained GS7. This model adjusts the risks of GS7 upon a negative repeat biopsy. Thus complete patient information in consolidated into a single patient risk profile. Our model is fitted to the world's largest PCa AS program, PRIAS. We also validated our model predictions for GS7 in external cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the discrimination and calibration measures of the predictions from our model (Table~\ref{table:prediction_validation}) were similar for PRIAS (internal validation), and Toronto and Johns Hopkins cohorts (external validation). Given the large size of these cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
 
-\textbf{Clinical implications:} The median survival time for GS7 is more than ten years in PRIAS. That is, more than 50\% patients do not require any biopsy during the first ten years of follow-up. The situation is similar in many other cohorts. Hence frequent biopsies may not be recommended for all patients.
+The clinical implications of our work are as follows. The median survival time for GS7 is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
 
-Existing work on reducing the burden of biopsies in AS primarily advocates less frequent heuristic schedules of biopsies \citep{inoue2018comparative} (e.g., biopsies biennially instead of annually). To our knowledge, risk-based biopsy schedules have barely been explored yet in AS \citep{nieboer2018active,bruinsma2016active}. The part of our results pertaining to the fixed/heuristic schedules is comparable with corresponding results obtained in existing work \citep{inoue2018comparative}, even though the AS cohorts are not the same. Thus, we anticipate similar validity for the results pertaining to the personalized schedules.
-
-Our work has certain limitations. The prediction model that we developed is valid only for the first thirteen years of follow-up in AS, whereas PCa in AS patients progresses slowly. This issue can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. The results of external validation indicate that the use of our model may be restricted in cohorts with AUC, and RMSPE results similar to that of PRIAS. To this end, in other cohorts, refitting the model to their dataset will be required before making risk based schedules, and estimating the consequences of each schedule. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging. Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes  (see Figure \ref{fig:jm_blockdiag}), mainly entails sharing the random effects in the joint model structure. Since MRI scans are expensive in developing countries, our model can also be used to trigger MRI scans. Lastly, in this study focus only on biopsy Gleason upgrade (reclassification). In this regard, accounting for competing risks (see Table \ref{table:prias_summary}), and for inter-observer variation \citep{coley2017prediction} in biopsy Gleason scores can be interesting to investigate further.
+Our work has certain limitations. The proposed model is valid only for the first thirteen years of follow-up in PRIAS, whereas GS7 may occur much later in many patients. Due to this issue, the calibration and discrimination measures of predictions were also less accurate in later follow-up periods. These issue can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. While we focused only on GS7, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology to schedule biopsies, and to estimate the consequences of following a schedule need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes, mainly entails connecting sub-models for the outcomes to shared random effects (see Figure~\ref{fig:jm_blockdiag}). Our model can also be used to schedule MRI scans, since they are expensive in developing countries.
